# light-torchSISSO

./: README.md  pyproject.toml
light_torchsisso/: executor.py  model.py  recipe.py  regressor.py
src/light_torchsisso/: feature_generator.py  main.py  model.py  recipe.py  regressor.py
