[project]
name = "light-torchsisso"
version = "0.1.0"
description = "A lightweight, memory-efficient Python implementation of the SISSO algorithm for symbolic regression."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
]

# 開発時にのみ必要な依存関係を[dev]として定義
[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib>=3.3.0",
    "memory-profiler", # 比較スクリプトで使う場合
]